chore: update Quarkus platform version to 3.21.1, chatbot [wip]